@@ -1,4 +1,0 @@
-library("testthat")
-library("Uniquorn")
-
-test_check("Uniquorn")
